--- a/app.json
+++ b/app.json
@@ -1,7 +1,24 @@
 {
-	"name": "CrizzyBot-Beta",
-	"description": "Bot Whataapp using java script by Fadhil Graphy",
-	"repository": "https://github.com/fdhlgrphy/Crizzy-Bot",
-	"logo": "https://node-js-sample.herokuapp.com/node.png",
-	"keywords": ["multi-device"]
+  "name": "CrizzyBot-Beta",
+  "description": "whatsapp md bot build with nodejs",
+  "repository": "https://github.com/fdhlgrphy/Crizzy-Bot",
+  "logo": "https://pbs.twimg.com/media/FO7fojOakAAyYgt?format=jpg&name=900x900",
+  "keywords": ["nodejs", "bot", "whatsapp bot", "whatsapp automation", "multi device"],
+  "buildpacks": [
+    {
+      "url": "heroku/nodejs"
+    },
+    {
+      "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
+    },
+    {
+      "url": "https://github.com/clhuang/heroku-buildpack-webp-binaries.git"
+    }
+  ],
+   "formation": {
+        "worker": {
+            "quantity": 1,
+            "size": "free"
+        }
+    }
 }
